Fixed width spacing

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,7 +2,7 @@
 {
     background-image: url("./ui/home-bg.png");
     position: absolute;
-    width: 1600px;
+    width: 100%;
     height: 976px;
     margin: auto;
   background-repeat:no-repeat;
